Fixed issues on the Date Picker translations (#471)
* Fix issues on the Date Picker translations

Fixed issues on the Date Picker translations:
- Catalan, Valencian (error on language code)
- Central Khmer (style error cutting the text)
- Spanish Castilian (bad translation)

* Change the previous approach in order to avoid cropped text.

--- a/src/scripts/Providers/Datepicker/Flatpickr/scss/_flatpickr.scss
+++ b/src/scripts/Providers/Datepicker/Flatpickr/scss/_flatpickr.scss
@@ -438,6 +438,11 @@ span.flatpickr-weekday {
 // IsRTL -------------------------------------------------------------------------
 ///
 .is-rtl {
+	.flatpickr-calendar {
+		// This +10px will be used to better contain all the text without cropping it since RTL texts are bigger
+		width: 330px;
+	}
+
 	.flatpickr-months,
 	.flatpickr-weekdays,
 	.flatpickr-days {
